# DepositDuck-api

./: .dockerignore  .env.e2e  .env.in  .env.test  .gitignore  .pre-commit-config.yaml  .prettierrc.js  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  justfile  makefile  pyproject.toml
.github/: dependabot.yaml  get_changelog_for_tag.sh
.github/actions/containerise/: action.yaml
.github/actions/e2e/: action.yaml
.github/actions/init-postgres/: action.yaml
.github/actions/pre-commit/: action.yaml
.github/actions/tag-and-release/: action.yaml
.github/actions/test/: action.yaml
.github/actions/uv/: action.yaml
.github/workflows/: ci.yaml  ci.yml  pr.yaml  sandbox.yaml
depositduck/: __init__.py  config.py  db.py  dependables.py  dependencies.py  forms.py  main.py  middleware.py  settings.py  utils.py
depositduck/api/: routes.py
depositduck/auth/: __init__.py  dependables.py  routes.py  users.py
depositduck/auth/forms/: login.py  signup.py  unsuitable_prospect_funnel.py
depositduck/dashboard/: __init__.py  forms.py  routes.py
depositduck/email/: __init__.py
depositduck/email/templates/: please_verify.html.jinja2  welcome.html.jinja2
depositduck/email/templates/common/: _base.html.jinja2
depositduck/forms/: __init__.py  validators.py
depositduck/kitchensink/: __init__.py  routes.py
depositduck/llm/: __init__.py  dependables.py  embeddings.py  routes.py
depositduck/models/: auth.py  common.py  deposit.py  dto.py  email.py  llm.py  people.py  sql.py  tables.py
depositduck/models/dto/: llm.py
depositduck/models/migrations/: env.py  script.py.mako
depositduck/models/migrations/versions/: 2024-03-23T0904_a7e319f79899_llm__llm.py  2024-03-23T0910_5c6c3dbda309_llm__embedding_minilml6v2.py  2024-03-23T0910_5c6c3dbda309_llm__minilml6_embeddings.py  2024-03-23T1212_cb55ea348903_llm__source_text.py  2024-03-23T1234_d6e60a817251_llm__snippet.py  2024-04-01T2331_c7b7775f6467_llm__embedding_nomic.py  2024-04-05T1740_f23c1e57b116_auth__user.py  2024-04-06T1000_28239c78fe9f_auth__access_token.py  2024-04-10T0721_90054aafa739_email__email.py  2024-04-23T0651_d6f3c7a542f7_add_person.py  2024-04-23T0712_7f669a1075d0_add_prospect.py  2024-04-23T0712_7f669a1075d0_people__prospect.py  2024-04-24T2312_6c4ff352cac0_deposit__tenancy.py
depositduck/models/sql/: auth.py  deposit.py  email.py  llm.py  people.py  tables.py
depositduck/web/: routes.py
depositduck/web/static/css/: main.css  main.css.map  main.css.min
depositduck/web/static/js/auth/: welcome.js
depositduck/web/static/scss/: depositduck-colors.scss  main.scss
depositduck/web/static/src/js/: main.js
depositduck/web/static/src/js/dashboard/: welcome.js
depositduck/web/templates/: __init__.py  home.html.jinja2  login.html.jinja2  main.html.jinja2
depositduck/web/templates/auth/: login.html.jinja2  signup.html.jinja2
depositduck/web/templates/common/: _base.html.jinja2  _footer.html.jinja2  _header.html.jinja2  _navbar.html.jinja2
depositduck/web/templates/dashboard/: home.html.jinja2  onboarding.html.jinja2
depositduck/web/templates/fragments/: fragment.html.jinja2  macros.html.jinja2
depositduck/web/templates/fragments/auth/signup/: _filter_prospect_answers.html.jinja2  _filter_prospect_form.html.jinja2  _filter_prospect_reject.html.jinja2  _signup_user_form.html.jinja2
depositduck/web/templates/fragments/dashboard/onboarding/: _onboarding_form.html.jinja2
docs/: 1_develop.md  2_project-structure.md  3_models-and-database.md  4_frontend.md  5_test.md  6_ci-cd.md  7_data-pipeline.md
local/: cut_release.sh  read_dotenv.sh  update_coverage_badge.sh
local/data_pipeline/: pdf_to_raw_sourcetext.py  raw_sourcetext_to_database.sh
local/database/: pg_hba.conf  postgresql.conf  run_postgres.sh
local/database/fixtures/: dev_fixture.sql  e2e_fixture.sql
local/database/init_scripts/: dev_fixture.sql  e2e_fixture.sql  init.sql
requirements/: base.in  base.txt  dev.in  dev.txt  test.in  test.txt
tests/: conftest.py
tests/depositduck/: test_dependables.py  test_main.py  test_settings.py
tests/depositduck/apiapp/: test_api_routes.py
tests/depositduck/llmapp/: test_llm_routes.py
tests/depositduck/webapp/: test_web_routes.py
tests/e2e/: conftest.py  mailhog_utils.py  test_auth.py
tests/e2e/auth/: test_auth_flow.py
tests/e2e/dashboard/: test_dashboard_flow.py
tests/unit/: conftest.py  test_utils.py
tests/unit/depositduck/: test_auth_middleware.py  test_dependables.py  test_main.py  test_settings.py
tests/unit/depositduck/api/: test_api_routes.py
tests/unit/depositduck/auth/: test_auth_dependables.py  test_auth_init.py  test_auth_routes.py  test_auth_routes_frontend.py  test_auth_routes_operations.py
tests/unit/depositduck/dashboard/: test_dashboard_routes.py
tests/unit/depositduck/email/: test_email_init.py
tests/unit/depositduck/llmapp/: test_llm_routes.py
tests/unit/depositduck/models/: test_deposit.py
tests/unit/depositduck/web/: test_routes.py  test_web_routes.py
tests/unit/depositduck/webapp/: test_web_routes.py
