[project]
name = "depositduck"
version = "0.0.0"
description = ""  # TODO
authors = [
  {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",

  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",

  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.12"

[tool.ruff]
target-version = "py312"
line-length = 90
indent-width = 4

[tool.ruff.lint]
# Pyflakes (`F`), pycodestyle (`E`), pycodestyle warnings (`W`) & isort (`I`)
select = ["E", "I", "F", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[project.urls]
Homepage = "https://github.com/albertomh/DepositDuck"
Documentation = "https://github.com/albertomh/DepositDuck"
Repository = "https://github.com/albertomh/DepositDuck.git"
Issues = "https://github.com/albertomh/DepositDuck/issues"
Changelog = "https://github.com/albertomh/DepositDuck/blob/main/CHANGELOG.md"
