[project]
name = "depositduck"
version = "0.0.0"
description = "DepositDuck - get what's yours!"
authors = [
  {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",

  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",

  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.12"
dependencies = [
    # database migrations
    "alembic~=1.13.1",
    # postgres adapter
    "asyncpg~=0.29.0",
    "cryptography~=42.0.5",
    # web framework
    "fastapi-slim~=0.111.0",
    # authentication framework
    "fastapi-users[sqlalchemy]~=13.0.0",
    "fastapi-users-db-sqlmodel~=0.3.0",
    # async http client
    "httpx~=0.27.0",
    # required by sqlalchemy but not included in 2.0.28
    # see https://github.com/sqlalchemy/sqlalchemy/issues/11129
    # hopefully resolved in sqlalchemy@2.1 and can remove explicit dependency
    "greenlet~=3.0.3",
    # templating engine
    "jinja2~=3.1.3",
    "jinja2-fragments~=1.5.0",
    # bindings for the pgvector embeddings & vector similarity library
    "pgvector~=0.3.0",
    # FastAPI settings
    "pydantic-settings~=2.3.2",
    # ORM
    # 0-based versioning necessitates tight pinning
    "sqlmodel==0.0.21",
    # logging
    "structlog~=24.4",
    # ASGI server
    "uvicorn[standard]~=0.30.1",
]

[tool.uv]
dev-dependencies = [
    "wat-inspector",  # version intentonally left unspecified
]

[project.optional-dependencies]
test = [
    "aiosmtpd~=1.4.5",
    "beautifulsoup4~=4.12.3",
    "coverage~=7.5",
    "flaky~=3.8",
    "httpx~=0.27.0",
    "playwright~=1.45",
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "time-machine~=2.16.0",
]

[tool.ruff]
target-version = "py312"
line-length = 90
indent-width = 4

[tool.ruff.lint]
# Pyflakes (`F`), pycodestyle (`E`), pycodestyle warnings (`W`) & isort (`I`)
select = ["E", "I", "F", "W"]
ignore = []

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pyright]
reportInvalidTypeForm = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = [
  "./depositduck/",
]
omit = [
  "./depositduck/kitchensink/*",
  "./depositduck/models/sql/*",
]

[tool.coverage.report]
omit = [
  "./depositduck/kitchensink/*",
  "./depositduck/models/sql/*",
  "./depositduck/models/dto/*",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if settings.debug",
]

[tool.bandit]
exclude_dirs = [
  "tests",
  "local/data_pipeline/pdf_to_raw_sourcetext.py",
]

[project.urls]
Homepage = "https://github.com/albertomh/DepositDuck"
Documentation = "https://github.com/albertomh/DepositDuck"
Repository = "https://github.com/albertomh/DepositDuck.git"
Issues = "https://github.com/albertomh/DepositDuck/issues"
Changelog = "https://github.com/albertomh/DepositDuck/blob/main/CHANGELOG.md"
